feat: 添加不蒜子api作为网站计数器

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -109,6 +109,9 @@ const bannerOffset =
 			/>
 		))}
 
+		<!-- Busuanzi 统计脚本 -->
+		<script src="//api.busuanzi.cc/static/3.6.9/busuanzi.min.js" defer></script>
+
 		<!-- 在页面渲染前设置主题以避免闪烁 -->
 		<script is:inline define:vars={{DEFAULT_THEME, LIGHT_MODE, DARK_MODE, AUTO_MODE, BANNER_HEIGHT_EXTEND, PAGE_WIDTH, configHue}}>
 			// 从本地存储加载主题
