--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -67,7 +67,16 @@ const jsonLd = {
                         {remarkPluginFrontmatter.minutes} {" " + i18n(remarkPluginFrontmatter.minutes === 1 ? I18nKey.minuteCount : I18nKey.minutesCount)}
                     </div>
                 </div>
+                <!-- 新增阅读量统计 -->
+                <div class="flex flex-row items-center">
+                    <div class="transition h-6 w-6 rounded-md bg-black/5 dark:bg-white/10 text-black/50 dark:text-white/50 flex items-center justify-center mr-2">
+                        <Icon name="material-symbols:visibility-outline-rounded"></Icon>
+                    </div>
+                    <span class="text-sm" id="busuanzi_container_page_pv"><span id="busuanzi_value_page_pv"></span> Page Views</span>
+                </div>
             </div>
+
+
 
             <!-- title -->
             <div class="relative onload-animation">
@@ -133,4 +142,7 @@ const jsonLd = {
         </a>
     </div>
 
+
+
+    <script src="//api.busuanzi.cc/static/3.6.9/busuanzi.min.js" defer></script>
 </MainGridLayout>
