--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -72,7 +72,7 @@ const jsonLd = {
                     <div class="transition h-6 w-6 rounded-md bg-black/5 dark:bg-white/10 text-black/50 dark:text-white/50 flex items-center justify-center mr-2">
                         <Icon name="material-symbols:visibility-outline-rounded"></Icon>
                     </div>
-                    <span class="text-sm" id="busuanzi_container_page_pv"><span id="busuanzi_value_page_pv"></span> Page Views</span>
+                    <span class="text-sm"><span id="busuanzi_page_pv">加载中...</span> 次</span>
                 </div>
             </div>
 
