--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -98,7 +98,9 @@ const bannerOffset =
 		<meta property="twitter:url" content={Astro.url}>
 		<meta name="twitter:title" content={pageTitle}>
 		<meta name="twitter:description" content={description || pageTitle}>
-
+		
+		<!-- Microsoft Bing Webmaster Tools verification -->
+		<meta name="msvalidate.01" content="21BFB0CDA445962F872741BC98C64381" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		{favicons.map(favicon => (
