--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,7 +14,7 @@ if (!aboutPost) {
 
 const { Content } = await render(aboutPost);
 ---
-<MainGridLayout title={i18n(I18nKey.about)} description={i18n(I18nKey.about)}>
+<MainGridLayout title={i18n(I18nKey.about)} description="欢迎来到Owen_W的博客，这是一个记录个人成长与技术探索的博客，主要分享计算机学习笔记与日常折腾电子产品的记录。内容涵盖开发环境搭建、网络搭建、云计算、网络安全、工具使用心得等，以持续总结与反思的方式沉淀知识。博客基于 Astro 与 Fuwari 构建，在美观的同时注重简洁与专注，旨在为学习与记录提供一个安静而高效的空间。">
     <div class="flex w-full rounded-[var(--radius-large)] overflow-hidden relative min-h-32">
         <div class="card-base z-10 px-9 py-6 relative w-full ">
             <Markdown class="mt-2">
